--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -22,8 +22,8 @@ catalog:
   '@nuxt/kit': ^3.16.0
   '@nuxt/schema': ^3.16.0
   '@nuxt/test-utils': ^3.16.0
-  # '@nuxt/ui-pro': ^3.0.0-beta.3
-  '@nuxt/ui-pro': https://pkg.pr.new/@nuxt/ui-pro@063cda3
+  '@nuxt/ui-pro': ^3.0.0-beta.3
+  # '@nuxt/ui-pro': https://pkg.pr.new/@nuxt/ui-pro@063cda3
   '@nuxtjs/supabase': ^1.5.0
   '@release-it/conventional-changelog': ^10.0.0
   '@types/node': ^22.10.2
