--- a/packages/nuxt-galaxy/src/runtime/supabase/config.toml
+++ b/packages/nuxt-galaxy/src/runtime/supabase/config.toml
@@ -97,8 +97,7 @@ port = 54324
 [storage]
 enabled = true
 # The maximum file size allowed (e.g. "5MB", "500KB").
-file_size_limit = "50MiB"
-
+file_size_limit = "5MB"
 # Image transformation API is available to Supabase Pro plan.
 # [storage.image_transformation]
 # enabled = true
