--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -21,7 +21,7 @@ catalog:
   '@nuxt/module-builder': ^0.8.4
   '@nuxt/schema': ^3.16.0
   '@nuxt/test-utils': ^3.16.0
-  '@nuxt/ui-pro': ^3.0.0-beta.4
+  '@nuxt/ui-pro': ^3.0.0
   # '@nuxt/ui-pro': https://pkg.pr.new/@nuxt/ui-pro@063cda3
   '@nuxtjs/supabase': ^1.5.0
   '@release-it/conventional-changelog': ^10.0.0
