move supabase dir to root

--- a/packages/nuxt-galaxy/package.json
+++ b/packages/nuxt-galaxy/package.json
@@ -32,14 +32,14 @@
     "test:watch": "vitest watch",
     "typecheck": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
     "cleandep": "rm -rf node_modules && rm -rf .nuxt && rm -rf dist && rm -rf playground/node_modules && rm -rf playground/.nuxt && rm -rf playground/.output",
-    "supabase:status": "pnpm supabase --workdir src/runtime status",
-    "supabase:start": "pnpm supabase --workdir src/runtime start",
-    "supabase:stop": "pnpm supabase --workdir src/runtime stop",
-    "supabase:db:reset": "pnpm supabase --workdir src/runtime db reset",
-    "supabase:migration:new": "pnpm supabase --workdir src/runtime migration new",
-    "supabase:migration:up": "pnpm supabase --workdir src/runtime migration up",
+    "supabase:status": "pnpm supabase status",
+    "supabase:start": "pnpm supabase start",
+    "supabase:stop": "pnpm supabase stop",
+    "supabase:db:reset": "pnpm supabase db reset",
+    "supabase:migration:new": "pnpm supabase migration new",
+    "supabase:migration:up": "pnpm supabase migration up",
     "supabase:migration:galaxy:create": "pnpm run supabase:migration:new bucket && sleep .5 && pnpm run drizzle:generate && sleep .5 && pnpm run supabase:migration:new galaxy && sleep .5 && pnpm run supabase:migration:new realtime && sleep .5 && pnpm run supabase:migration:new rbac && sleep .2 && pnpm run supabase:migration:new rls",
-    "supabase:generate:types": "pnpm supabase --workdir src/runtime gen types typescript --local > src/runtime/types/database.ts",
+    "supabase:generate:types": "pnpm supabase gen types typescript --local > src/runtime/types/database.ts",
     "drizzle:generate": "pnpm drizzle-kit generate"
   },
   "dependencies": {
