Add dashboard layout (#13)
* WIP: add dashboard layout to workflow and analysis

* Can delete, rename and rerun analysis

* use arrowDown and up shortcuts to navigate on the list of analyses

* add new auth page

* add user dropdown in AppHeader

* feat(auth): Activate github auth

* remove client supabase middleware

* Handle error on file upload

* Fix(polling): improve polling system and add maxRetries = 50

* move supabase dir to root

* add rls for views

--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
       "vue-demi"
     ]
   },
+  "resolutions": {
+    "cookie": "0.7.2",
+    "ohash": "1.1.6"
+  },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
   },
