--- a/packages/blendtype/package.json
+++ b/packages/blendtype/package.json
@@ -40,6 +40,7 @@
     "cleandep": "rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
+    "effect": "^3.14.1",
     "h3": "catalog:",
     "ofetch": "catalog:",
     "ufo": "catalog:",
