--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -36,6 +36,7 @@ catalog:
   dotenv: ^16.4.7
   drizzle-kit: ^0.30.1
   drizzle-orm: ^0.40.0
+  effect: ^3.14.1
   eslint: ^9.21.0
   eslint-config-unjs: ^0.4.2
   eslint-plugin-format: ^1.0.1
