--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,11 +17,11 @@ catalog:
   '@iconify-json/tabler': ^1.2.13
   '@nuxt/devtools': ^2.0.0-beta.3
   '@nuxt/eslint-config': ^1.1.0
-  '@nuxt/kit': ^3.16.0
+  '@nuxt/kit': ^3.16.1
   '@nuxt/module-builder': ^0.8.4
-  '@nuxt/schema': ^3.16.0
-  '@nuxt/test-utils': ^3.16.0
-  '@nuxt/ui-pro': ^3.0.0
+  '@nuxt/schema': ^3.16.1
+  '@nuxt/test-utils': ^3.16.1
+  '@nuxt/ui-pro': ^3.0.2
   # '@nuxt/ui-pro': https://pkg.pr.new/@nuxt/ui-pro@063cda3
   '@nuxtjs/supabase': ^1.5.0
   '@release-it/conventional-changelog': ^10.0.0
@@ -36,6 +36,7 @@ catalog:
   dotenv: ^16.4.7
   drizzle-kit: ^0.30.1
   drizzle-orm: ^0.40.0
+  effect: ^3.14.1
   eslint: ^9.21.0
   eslint-config-unjs: ^0.4.2
   eslint-plugin-format: ^1.0.1
@@ -45,7 +46,7 @@ catalog:
   jiti: ^2.4.2
   jwt-decode: ^4.0.0
   lint-staged: ^15.3.0
-  nuxt: ^3.16.0
+  nuxt: ^3.16.1
   ofetch: ^1.4.1
   playwright-core: ^1.50.0
   postgres: ^3.4.5
