install @nuxt/content directly in nuxt-galaxy module

--- a/packages/nuxt-galaxy/package.json
+++ b/packages/nuxt-galaxy/package.json
@@ -43,6 +43,7 @@
     "drizzle:generate": "pnpm drizzle-kit generate"
   },
   "dependencies": {
+    "@nuxt/content": "catalog:",
     "@nuxt/kit": "catalog:",
     "@nuxtjs/supabase": "catalog:",
     "blendtype": "workspace:*",
