--- a/packages/gaas-ui/package.json
+++ b/packages/gaas-ui/package.json
@@ -29,6 +29,7 @@
     "@iconify-json/streamline": "catalog:",
     "@iconify-json/svg-spinners": "catalog:",
     "@iconify-json/tabler": "catalog:",
+    "@nuxt/content": "catalog:",
     "@nuxt/ui-pro": "catalog:",
     "@vueuse/core": "catalog:",
     "drizzle-kit": "catalog:",
