--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nuxt/ui-pro": "catalog:",
     "blendtype": "workspace:*",
+    "nuxt": "^3.16.2",
     "supabase": "catalog:"
   },
   "devDependencies": {
