--- a/packages/gaas-wiki/package.json
+++ b/packages/gaas-wiki/package.json
@@ -15,12 +15,22 @@
     "typecheck": "vue-tsc --noEmit",
     "cleandep": "rm -rf node_modules && rm -rf .data && rm -rf .nuxt && rm -rf .playground/.nuxt && rm -rf .playground/.output && rm -rf .playground/node_modules && rm -rf .playground/.data"
   },
-  "devDependencies": {
+  "dependencies": {
     "@nuxt/content": "catalog:",
+    "@nuxt/ui-pro": "catalog:",
+    "zod": "catalog:",
+    "zod-validation-error": "catalog:"
+  },
+  "devDependencies": {
     "@nuxt/eslint": "latest",
+    "@nuxt/test-utils": "catalog:",
+    "@vue/test-utils": "catalog:",
     "eslint": "catalog:",
+    "happy-dom": "catalog:",
     "nuxt": "catalog:",
+    "playwright-core": "catalog:",
     "typescript": "catalog:",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-tsc": "^2.2.0"
   }
 }
