publish gaas-wiki to pkg-pr-new

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,4 @@ jobs:
             './packages/blendtype'
             './packages/nuxt-galaxy'
             './packages/gaas-ui'
+            './packages/gaas-wiki'
