--- a/playground/package.json
+++ b/playground/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "catalog:nuxt",
-    "@nuxt/ui-pro": "catalog:nuxt",
+    "@nuxt/ui": "catalog:nuxt",
     "nuxt": "catalog:nuxt",
     "vue": "latest",
     "vue-router": "latest"
