--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -61,6 +61,7 @@ catalogs:
     '@nuxt/module-builder': ^1.0.1
     '@nuxt/schema': ^3.17.0
     '@nuxt/test-utils': ^3.17.0
+    '@nuxt/ui': ^3.1.1
     '@nuxt/ui-pro': ^3.1.1
     '@nuxtjs/supabase': ^1.5.0
     nuxt: ^3.17.0
