--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,8 @@
 packages:
-  - packages/*
+  - packages/blendtype
+  - packages/nuxt-galaxy
+  - packages/ui
+  - packages/wiki
   - playground
 
 catalog:
@@ -61,6 +64,7 @@ catalogs:
     '@nuxt/module-builder': ^1.0.1
     '@nuxt/schema': ^3.17.0
     '@nuxt/test-utils': ^3.17.0
-    '@nuxt/ui-pro': ^3.1.0
+    '@nuxt/ui': ^3.1.1
+    '@nuxt/ui-pro': ^3.1.1
     '@nuxtjs/supabase': ^1.5.0
     nuxt: ^3.17.0
