* Add gaas-cli package * Add components and composables to display citation and biblio items

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ coverage
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# Playground data
+
+playground/content/bibliography
+playground/content/wiki/satellites
