chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
+      "@tailwindcss/oxide",
       "better-sqlite3",
       "esbuild",
       "simple-git-hooks",
