--- a/packages/nuxt-galaxy/package.json
+++ b/packages/nuxt-galaxy/package.json
@@ -74,7 +74,7 @@
     "happy-dom": "catalog:",
     "nuxt": "catalog:nuxt",
     "playwright-core": "catalog:",
-    "typescript": "~5.6.3",
+    "typescript": "catalog:",
     "vitest": "catalog:",
     "vue-tsc": "catalog:"
   }
