--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,6 +29,7 @@
     "@iconify-json/streamline": "catalog:",
     "@iconify-json/svg-spinners": "catalog:",
     "@iconify-json/tabler": "catalog:",
+    "@nuxt/ui": "catalog:nuxt",
     "@nuxt/ui-pro": "catalog:nuxt",
     "@nuxtjs/supabase": "catalog:nuxt",
     "@vueuse/core": "catalog:",
