--- a/docs/package.json
+++ b/docs/package.json
@@ -20,15 +20,15 @@
     "@iconify-json/simple-icons": "^1.2.33",
     "@iconify-json/vscode-icons": "^1.2.20",
     "@nuxt/content": "^3.5.1",
-    "@nuxt/image": "^1.10.0",
+    "@nuxt/image": "catalog:nuxt",
     "@nuxt/test-utils": "3.18.0",
-    "@nuxt/ui-pro": "^3.1.1",
-    "nuxt": "^3.17.3",
+    "@nuxt/ui-pro": "catalog:nuxt",
+    "nuxt": "catalog:nuxt",
     "nuxt-llms": "0.1.2",
     "nuxt-og-image": "^5.1.3"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/eslint": "catalog:nuxt",
     "eslint": "^9.26.0",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.10"
