--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - packages/nuxt-galaxy
   - packages/ui
   - packages/wiki
+  - docs
   - playground
 
 catalog:
@@ -59,7 +60,9 @@ catalogs:
   nuxt:
     '@nuxt/content': ^3.5.1
     '@nuxt/devtools': ^2.4.0
+    '@nuxt/eslint': ^1.4.0
     '@nuxt/eslint-config': ^1.1.0
+    '@nuxt/image': ^1.10.0
     '@nuxt/kit': ^3.17.3
     '@nuxt/module-builder': ^1.0.1
     '@nuxt/schema': ^3.17.3
