--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,9 @@
+workflow:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - when: always
+
 # The Docker image that will be used to build your app
 image: node:22.15.1-bookworm
 # Functions that should be executed before the build script is run
@@ -16,4 +22,4 @@ pages:
   rules:
     # This ensures that only pushes to the default branch will trigger
     # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == docs
+    - if: $CI_COMMIT_REF_NAME == "docs"
