generate instead of build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,9 @@ pages:
     - pnpm install
     - echo "Building the docs..."
     - cd docs
-    - export NUXT_UI_PRO_LICENSE=${NUXT_UI_PRO_LICENSE} pnpm run build
+    - echo "Generating the static files..."
+    - export NUXT_UI_PRO_LICENSE=${NUXT_UI_PRO_LICENSE} pnpm run generate
+    - echo "Copying the generated files to the public folder..."
     - mv dist ../public
   cache:
     key:
