--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,7 @@ pages:
     - echo "Building the docs..."
     - cd docs
     - echo "Generating the static files..."
-    - export NUXT_UI_PRO_LICENSE=${NUXT_UI_PRO_LICENSE} pnpm run generate
-    - pwd
-    - ls -l
-    - ls -l ../
+    - export NUXT_UI_PRO_LICENSE=${NUXT_UI_PRO_LICENSE} && pnpm run generate
     - echo "Copying the generated files to the public folder..."
     - mv dist ../public
   cache:
