--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,11 @@ pages:
         - pnpm-lock.yaml
     paths:
       - .pnpm-store
-  artifacts:
-    paths:
-      # The folder that contains the files to be exposed at the Page URL
-      - public
+  pages: true
+  # artifacts:
+  #   paths:
+  #     # The folder that contains the files to be exposed at the Page URL
+  #     - public
   rules:
     # This ensures that only pushes to the default branch will trigger
     # a pages deploy
