--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test": "pnpm --filter './packages/**' test",
     "dev": "pnpm --filter ./playground dev",
     "lint": "eslint .",
-    "cleandep": "rm -rf node_modules && rm -rf pnpm-lock.yaml && pnpm --filter '**' run cleandep",
+    "cleandep": "rm -rf node_modules pnpm-lock.yaml && pnpm --filter '**' run cleandep && pnpm install",
     "build": "pnpm --filter './packages/**' prepack",
     "dev:prepare": "pnpm --filter './packages/**' run dev:prepare",
     "typecheck": "pnpm --filter './packages/**' run typecheck",
+    "docs:dev": "pnpm --filter ./docs dev",
+    "docs:build": "pnpm --filter ./docs build",
+    "docs:generate": "pnpm --filter ./docs generate",
     "release": "pnpm run lint && pnpm run typecheck && pnpm run test && changelogen --output CHANGELOG.md && jiti scripts/release.ts && pnpm -r run release:publish && git push --follow-tags"
   },
   "devDependencies": {
@@ -36,13 +39,16 @@
       "esbuild",
       "simple-git-hooks",
       "supabase",
-      "unrs-resolver",
+      "unrs-resolver"
+    ],
+    "ignoredBuiltDependencies": [
       "vue-demi"
     ]
   },
   "resolutions": {
     "cookie": "0.7.2",
-    "ohash": "1.1.6"
+    "ohash": "1.1.6",
+    "unimport": "4.1.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
