--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -14,7 +14,7 @@
     "test": "vitest",
     "release:publish": "pnpm publish --access public",
     "typecheck": "vue-tsc --noEmit",
-    "cleandep": "rm -rf node_modules && rm -rf .data && rm -rf .nuxt && rm -rf .playground/.nuxt && rm -rf .playground/.output && rm -rf .playground/node_modules && rm -rf .playground/.data"
+    "cleandep": "rm -rf node_modules .data .nuxt .playground/.nuxt .playground/.output .playground/node_modules .playground/.data"
   },
   "dependencies": {
     "@gaas/ui": "workspace:^",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@nuxt/test-utils": "catalog:nuxt",
     "@vue/test-utils": "catalog:",
+    "embla-carousel": "catalog:",
     "eslint": "catalog:",
     "happy-dom": "catalog:",
     "nuxt": "catalog:nuxt",
