--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -33,6 +33,7 @@ catalog:
   drizzle-kit: ^0.31.0
   drizzle-orm: ^0.43.1
   effect: ^3.14.1
+  embla-carousel: ^8.6.0
   eslint: ^9.21.0
   eslint-config-unjs: ^0.4.2
   eslint-plugin-format: ^1.0.1
