use pnpm in github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,16 +32,16 @@ jobs:
         run: pnpm install --no-frozen-lockfile
 
       - name: Lint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Build packages
-        run: npm run build
+        run: pnpm run build
         env:
           NUXT_UI_PRO_LICENSE: ${{secrets.NUXT_UI_PRO_LICENSE}}
       - name: Publish
         run:
           >
-            npx pkg-pr-new publish
+            pnpx pkg-pr-new publish
             --no-template --pnpm
             './packages/blendtype'
             './packages/nuxt-galaxy'
