--- a/docs/package.json
+++ b/docs/package.json
@@ -17,22 +17,22 @@
     "cleandep": "rm -rf node_modules dist .output .data pnpm-lock.yaml"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.40",
-    "@iconify-json/simple-icons": "^1.2.33",
-    "@iconify-json/vscode-icons": "^1.2.20",
-    "@nuxt/content": "^3.5.1",
+    "@iconify-json/lucide": "catalog:",
+    "@iconify-json/simple-icons": "catalog:",
+    "@iconify-json/vscode-icons": "catalog:",
+    "@nuxt/content": "catalog:nuxt",
     "@nuxt/image": "catalog:nuxt",
-    "@nuxt/test-utils": "3.18.0",
+    "@nuxt/test-utils": "catalog:nuxt",
     "@nuxt/ui-pro": "catalog:nuxt",
     "nuxt": "catalog:nuxt",
-    "nuxt-llms": "0.1.3",
-    "nuxt-og-image": "^5.1.3"
+    "nuxt-llms": "catalog:nuxt",
+    "nuxt-og-image": "catalog:nuxt"
   },
   "devDependencies": {
     "@nuxt/eslint": "catalog:nuxt",
     "embla-carousel": "catalog:",
-    "eslint": "^9.26.0",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^2.2.10"
+    "eslint": "catalog:",
+    "typescript": "catalog:",
+    "vue-tsc": "catalog:"
   }
 }
