--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,22 +10,24 @@ catalog:
   '@antfu/eslint-config': ^4.2.0
   '@iconify-json/eos-icons': ^1.2.2
   '@iconify-json/ep': ^1.2.2
-  '@iconify-json/lucide': ^1.2.20
+  '@iconify-json/lucide': ^1.2.40
   '@iconify-json/majesticons': ^1.2.2
   '@iconify-json/material-symbols': ^1.2.12
   '@iconify-json/mdi': ^1.2.2
   '@iconify-json/octicon': ^1.2.5
-  '@iconify-json/simple-icons': ^1.2.22
+  '@iconify-json/simple-icons': ^1.2.33
   '@iconify-json/stash': ^1.2.2
   '@iconify-json/streamline': ^1.2.2
   '@iconify-json/svg-spinners': ^1.2.2
   '@iconify-json/tabler': ^1.2.13
+  '@iconify-json/vscode-icons': ^1.2.20
   '@release-it/conventional-changelog': ^10.0.0
   '@types/node': ^22.10.2
   '@vitest/coverage-v8': ^3.0.7
   '@vue/test-utils': ^2.4.6
   '@vueuse/core': ^13.1.0
   automd: ^0.4.0
+  better-sqlite3: ^11.10.0
   bumpp: ^10.0.2
   changelogen: ^0.6.0
   defu: ^6.1.4
@@ -34,7 +36,7 @@ catalog:
   drizzle-orm: ^0.44.0
   effect: ^3.14.1
   embla-carousel: ^8.6.0
-  eslint: ^9.21.0
+  eslint: ^9.26.0
   eslint-config-unjs: ^0.4.2
   eslint-plugin-format: ^1.0.1
   fs-extra: ^11.2.0
@@ -53,7 +55,7 @@ catalog:
   ufo: ^1.5.4
   unbuild: ^3.5.0
   vitest: ^3.0.4
-  vue-tsc: ^2.2.0
+  vue-tsc: ^2.2.10
   zod: ^3.24.1
   zod-validation-error: ^3.4.0
 
@@ -67,8 +69,10 @@ catalogs:
     '@nuxt/kit': ^3.17.5
     '@nuxt/module-builder': ^1.0.1
     '@nuxt/schema': ^3.17.5
-    '@nuxt/test-utils': ^3.17.5
+    '@nuxt/test-utils': ^3.19.1
     '@nuxt/ui': ^3.1.3
     '@nuxt/ui-pro': ^3.1.3
     '@nuxtjs/supabase': ^1.5.1
     nuxt: ^3.17.5
+    nuxt-llms: ^0.1.3
+    nuxt-og-image: ^5.1.3
