Fix: css not load correctly

--- a/packages/blendtype/package.json
+++ b/packages/blendtype/package.json
@@ -2,7 +2,7 @@
   "name": "blendtype",
   "type": "module",
   "version": "0.0.3-alpha.5",
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.12.1",
   "description": "",
   "author": "Rémi Planel <rplanel@pasteur.fr>",
   "license": "MIT",
@@ -40,6 +40,7 @@
     "cleandep": "rm -rf node_modules dist"
   },
   "dependencies": {
+    "dotenv": "catalog:",
     "effect": "catalog:",
     "h3": "catalog:",
     "ofetch": "catalog:",
