--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,9 +34,16 @@
     "@nuxt/ui": "catalog:nuxt",
     "@nuxt/ui-pro": "catalog:nuxt",
     "@nuxtjs/supabase": "catalog:nuxt",
+    "@observablehq/plot": "catalog:dataviz",
+    "@uwdata/mosaic-core": "catalog:dataviz",
+    "@uwdata/mosaic-sql": "catalog:dataviz",
+    "@uwdata/vgplot": "catalog:dataviz",
     "@vueuse/core": "catalog:",
+    "apache-arrow": "^21.0.0",
+    "d3": "catalog:dataviz",
     "drizzle-kit": "catalog:",
     "effect": "catalog:",
+    "htl": "catalog:",
     "jwt-decode": "catalog:",
     "nuxt-galaxy": "workspace:*",
     "vitest": "catalog:",
