--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -20,7 +20,7 @@
     "@gaas/ui": "workspace:^",
     "@nuxt/content": "catalog:nuxt",
     "@nuxt/eslint": "latest",
-    "@nuxt/ui-pro": "catalog:nuxt",
+    "@nuxt/ui": "catalog:nuxt",
     "better-sqlite3": "catalog:",
     "zod": "catalog:",
     "zod-validation-error": "catalog:"
