--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "docs:dev": "pnpm --filter ./docs dev",
     "docs:build": "pnpm --filter ./docs build",
     "docs:generate": "pnpm --filter ./docs generate",
-    "release": "pnpm run lint && pnpm run typecheck && pnpm run test && changelogen --output CHANGELOG.md && jiti scripts/release.ts && pnpm -r run release:publish && git push --follow-tags"
+    "release": "pnpm run lint && pnpm run typecheck && pnpm run test && changelogen --output CHANGELOG.md && jiti scripts/release.ts && pnpm -r run release:publish && git push --follow-tags",
+    "supabase:status": "pnpm supabase --workdir packages/nuxt-galaxy status",
+    "supabase:start": "pnpm supabase --workdir packages/nuxt-galaxy start",
+    "supabase:stop": "pnpm supabase --workdir packages/nuxt-galaxy stop"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
@@ -31,21 +34,7 @@
     "lint-staged": "catalog:",
     "simple-git-hooks": "catalog:"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@parcel/watcher",
-      "@tailwindcss/oxide",
-      "better-sqlite3",
-      "esbuild",
-      "sharp",
-      "simple-git-hooks",
-      "supabase",
-      "unrs-resolver"
-    ],
-    "ignoredBuiltDependencies": [
-      "vue-demi"
-    ]
-  },
+  "pnpm": {},
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
   },
