--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -50,8 +50,8 @@ catalog:
   playwright-core: ^1.54.2
   postgres: ^3.4.7
   simple-git-hooks: ^2.13.1
-  supabase: ^2.34.3
-  tailwindcss: ^4.1.12
+  supabase: ^2.47.72
+  tailwindcss: ^4.1.13
   typescript: ^5.9.2
   ufo: ^1.6.1
   unbuild: ^3.6.1
@@ -79,9 +79,17 @@ catalogs:
     '@nuxt/module-builder': ^1.0.2
     '@nuxt/schema': ^4.1.2
     '@nuxt/test-utils': ^3.19.2
-    '@nuxt/ui': ^3.3.2
-    '@nuxt/ui-pro': ^3.3.2
+    '@nuxt/ui': ^4.0.0
     '@nuxtjs/supabase': ^1.6.0
     nuxt: ^4.1.2
     nuxt-llms: ^0.1.3
     nuxt-og-image: ^5.1.9
+ignoredBuiltDependencies:
+  - '@parcel/watcher'
+  - '@tailwindcss/oxide'
+  - esbuild
+  - unrs-resolver
+  - vue-demi
+onlyBuiltDependencies:
+  - better-sqlite3
+  - supabase
