start meilisearch integration: - add some command in cli and a component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,6 +44,7 @@
     "effect": "catalog:",
     "htl": "catalog:",
     "jwt-decode": "catalog:",
+    "meilisearch": "catalog:",
     "nuxt-galaxy": "workspace:*",
     "vitest": "catalog:",
     "zod": "catalog:",
