--- a/packages/gaas-cli/pyproject.toml
+++ b/packages/gaas-cli/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.7"
 dependencies = [
+  "meilisearch>=0.37.0",
   "python-dotenv>=1.1.1",
   "python-frontmatter>=1.1.0",
   "pyzotero>=1.6.11",
