--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -46,6 +46,7 @@ catalog:
   jiti: ^2.6.1
   jwt-decode: ^4.0.0
   lint-staged: ^16.1.5
+  meilisearch: ^0.53.0
   ofetch: ^1.4.1
   playwright-core: ^1.54.2
   postgres: ^3.4.7
@@ -82,6 +83,7 @@ catalogs:
     '@nuxtjs/supabase': ^1.6.0
     nuxt: ^4.1.2
     nuxt-llms: ^0.1.3
+    nuxt-meilisearch: ^1.3.10
     nuxt-og-image: ^5.1.9
 
 ignoredBuiltDependencies:
