--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,54 @@
-workflow:
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-      when: never
-    - when: always
+variables:
+  UV_VERSION: 0.9.12
+  PYTHON_VERSION: '3.13'
+  BASE_LAYER: bookworm-slim
+  # GitLab CI creates a separate mountpoint for the build directory,
+  # so we need to copy instead of using hard links.
+  UV_LINK_MODE: copy
+  UV_PUBLISH_URL: '${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi'
+  UV_PUBLISH_USERNAME: gitlab-ci-token
+  UV_PUBLISH_PASSWORD: '${CI_JOB_TOKEN}'
 
-# The Docker image that will be used to build your app
-image: node:22.16.0-bookworm
-# Functions that should be executed before the build script is run
-before_script:
-  - npm install --global corepack@latest
-  - corepack enable
-  - corepack prepare pnpm@latest-10 --activate
-  - pnpm config set store-dir .pnpm-store
-pages:
+stages:
+  - publish
+  - deploy
+
+publish:gaas-cli:
+  stage: publish
+  image: ghcr.io/astral-sh/uv:$UV_VERSION-python$PYTHON_VERSION-$BASE_LAYER
+  variables:
+    UV_CACHE_DIR: .uv-cache
+    UV_PROJECT: packages/gaas-cli
+  cache:
+    - key:
+        files:
+          - uv.lock
+      paths:
+        - $UV_CACHE_DIR
+  script:
+    # Set the version in pyproject.toml to the current git tag
+    # - VERSION=$(git describe --exact-match --tags)
+    # - uv version --dry-run $VERSION
+    # Build and publish the package
+    - uv build
+    - uv publish packages/gaas-cli/dist/*.whl
+    - uv cache prune --ci
+  # rules:
+  #   - if: '$CI_COMMIT_TAG =~ /^gaas-cli-v\d+\.\d+\.\d+.*$/'
+  #     when: always
+  #   - when: never
+
+deploy:docs:
+  stage: deploy
+  image: node:22.16.0-bookworm
+  # Functions that should be executed before the build script is run
+  pages:
+    publish: docs/.output/public
+  before_script:
+    - npm install --global corepack@latest
+    - corepack enable
+    - corepack prepare pnpm@latest-10 --activate
+    - pnpm config set store-dir .pnpm-store
   script:
     - pnpm install
     - echo "Building the docs..."
@@ -20,7 +56,6 @@ pages:
     - echo "Generating the static files..."
     - export NUXT_UI_PRO_LICENSE=${NUXT_UI_PRO_LICENSE} && pnpm run generate
     - echo "Copying the generated files to the public folder..."
-    # - mv dist ../public
   cache:
     key:
       files:
@@ -31,8 +66,11 @@ pages:
     paths:
       # The directory that contains the built files to be published
       - docs/.output/public
-  publish: docs/.output/public
   rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == "docs"
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+      when: on_success
+    - if: '$CI_COMMIT_REF_NAME == "docs"'
+      when: on_success
+    - when: never # Fallback: skip everything else
