--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ publish:gaas-cli:
     # Before publishing, check if release already exists
     - |
       PACKAGE_NAME="gaas-cli"
-      PACKAGE_VERSION=$(uv version --project $UV_PROJECT)
+      PACKAGE_VERSION=$(uv version --short --project $UV_PROJECT)
       echo "Checking if ${PACKAGE_NAME} version ${PACKAGE_VERSION} exists..."
 
       # Query GitLab Package Registry API using Python (curl not available in uv image)
@@ -42,7 +42,7 @@ publish:gaas-cli:
       import json
       import sys
 
-      url = '${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages'
+      url = '${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages?package_type=pypi&package_name=${PACKAGE_NAME}&package_version=${PACKAGE_VERSION}'
       req = urllib.request.Request(url, headers={'JOB-TOKEN': '${CI_JOB_TOKEN}'})
 
       try:
