--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,30 +35,14 @@ publish:gaas-cli:
       PACKAGE_NAME="gaas-cli"
       PACKAGE_VERSION=$(uv version --short --project $UV_PROJECT)
       echo "Checking if ${PACKAGE_NAME} version ${PACKAGE_VERSION} exists..."
-
-      # Query GitLab Package Registry API using Python (curl not available in uv image)
-      python -c "
-      import urllib.request
-      import json
-      import sys
-
-      url = '${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages?package_type=pypi&package_name=${PACKAGE_NAME}&package_version=${PACKAGE_VERSION}'
-      req = urllib.request.Request(url, headers={'JOB-TOKEN': '${CI_JOB_TOKEN}'})
-
-      try:
-          with urllib.request.urlopen(req) as response:
-              packages = json.loads(response.read().decode())
-              print(packages)
-              if packages:
-                  print(f'Version ${PACKAGE_VERSION} already exists in the registry. Skipping publish.')
-                  sys.exit(100)
-              else:
-                  print(f'Version ${PACKAGE_VERSION} not found. Proceeding with publish...')
-                  sys.exit(0)
-      except urllib.error.HTTPError as e:
-          print(f'Error checking package: {e}')
-          sys.exit(0)  # Proceed with publish on error
-      " || { [ $? -eq 100 ] && exit 0; }
+      # Use the Python script to check if the package version exists
+      python scripts/check_package_exists.py \
+        --api-url "${CI_API_V4_URL}" \
+        --project-id "${CI_PROJECT_ID}" \
+        --package-name "${PACKAGE_NAME}" \
+        --package-version "${PACKAGE_VERSION}" \
+        --job-token "${CI_JOB_TOKEN}" \
+        || { [ $? -eq 100 ] && exit 0; }
     - uv build
     - uv publish packages/gaas-cli/dist/*.whl
     - uv cache prune --ci
