--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,6 +26,7 @@ catalog:
   '@vitest/coverage-v8': ^3.2.4
   '@vue/test-utils': ^2.4.6
   '@vueuse/core': ^13.9.0
+  apache-arrow: ^21.1.0
   automd: ^0.4.2
   better-sqlite3: ^12.4.6
   bumpp: ^10.3.1
