--- a/packages/gaas-cli/pyproject.toml
+++ b/packages/gaas-cli/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13.0"
 dependencies = [
   "meilisearch>=0.37.0",
+  "pandas>=2.3.3",
+  "pyarrow>=22.0.0",
   "python-dotenv>=1.2.1",
   "python-frontmatter>=1.1.0",
   "pyzotero>=1.7.5",
