--- a/packages/ui/compose.yaml
+++ b/packages/ui/compose.yaml
@@ -9,5 +9,5 @@ services:
     environment:
       MEILI_NO_ANALYTICS: 'true'
       MEILI_ENV: development
-      MEILI_MASTER_KEY: masterKey
+      MEILI_MASTER_KEY: MASTER_KEY
     restart: unless-stopped
