--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,9 @@
+catalogMode: prefer
+
+shellEmulator: true
+
+trustPolicy: no-downgrade
+
 packages:
   - packages/blendtype
   - packages/nuxt-galaxy
@@ -7,7 +13,7 @@ packages:
   - playground
 
 catalog:
-  '@antfu/eslint-config': ^5.4.1
+  '@antfu/eslint-config': ^6.7.1
   '@iconify-json/eos-icons': ^1.2.4
   '@iconify-json/ep': ^1.2.3
   '@iconify-json/lucide': ^1.2.75
@@ -16,6 +22,7 @@ catalog:
   '@iconify-json/mdi': ^1.2.3
   '@iconify-json/octicon': ^1.2.19
   '@iconify-json/simple-icons': ^1.2.60
+  '@iconify-json/solar': ^1.2.5
   '@iconify-json/stash': ^1.2.4
   '@iconify-json/streamline': ^1.2.5
   '@iconify-json/svg-spinners': ^1.2.4
@@ -23,6 +30,7 @@ catalog:
   '@iconify-json/vscode-icons': ^1.2.36
   '@release-it/conventional-changelog': ^10.0.2
   '@types/node': ^22.19.1
+  '@unocss/eslint-plugin': ^66.5.10
   '@vitest/coverage-v8': ^3.2.4
   '@vue/test-utils': ^2.4.6
   '@vueuse/core': ^13.9.0
@@ -53,11 +61,12 @@ catalog:
   postgres: ^3.4.7
   simple-git-hooks: ^2.13.1
   supabase: ^2.62.6
-  tailwindcss: ^4.1.17
   typescript: ^5.9.3
   ufo: ^1.6.1
   unbuild: ^3.6.1
+  uuid: ^13.0.0
   vitest: ^3.2.4
+  vue: latest
   vue-tsc: ^3.1.5
   zod: ^4.1.13
   zod-validation-error: ^4.0.2
@@ -74,19 +83,16 @@ catalogs:
     '@nuxt/content': ^3.8.2
     '@nuxt/devtools': ^2.7.0
     '@nuxt/eslint': ^1.10.0
-    '@nuxt/eslint-config': ^1.10.0
     '@nuxt/image': ^1.11.0
     '@nuxt/kit': ^4.2.1
     '@nuxt/module-builder': ^1.0.2
     '@nuxt/schema': ^4.2.1
     '@nuxt/test-utils': ^3.20.1
     '@nuxt/ui': ^4.2.1
-    '@nuxtjs/supabase': ^2.0.2
+    '@nuxtjs/supabase': ^2.0.3
     nuxt: ^4.2.1
     nuxt-llms: ^0.1.3
-    nuxt-meilisearch: ^1.3.10
     nuxt-og-image: ^5.1.12
-
 ignoredBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
