--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "pnpm --filter './packages/**' test",
     "dev": "pnpm --filter ./playground dev",
-    "lint": "eslint .",
+    "lint": "pnpm --filter './packages/**' lint",
     "cleandep": "rm -rf node_modules pnpm-lock.yaml && pnpm --filter '**' run cleandep && pnpm install",
     "build": "pnpm --filter './packages/**' prepack",
     "dev:prepare": "pnpm --filter './packages/**' run dev:prepare",
