--- a/packages/blendtype/package.json
+++ b/packages/blendtype/package.json
@@ -50,10 +50,10 @@
   "devDependencies": {
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
-    "@vue/compiler-core": "^3.5.25",
+    "@vue/compiler-core": "catalog:",
     "automd": "catalog:",
     "changelogen": "catalog:",
-    "esbuild": "^0.27.0",
+    "esbuild": "catalog:",
     "eslint": "catalog:",
     "eslint-config-unjs": "catalog:",
     "jiti": "catalog:",
