--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -32,6 +32,7 @@ catalog:
   '@types/node': ^22.19.1
   '@unocss/eslint-plugin': ^66.5.10
   '@vitest/coverage-v8': ^3.2.4
+  '@vue/compiler-core': ^3.5.25
   '@vue/test-utils': ^2.4.6
   '@vueuse/core': ^13.9.0
   apache-arrow: ^21.1.0
@@ -45,6 +46,7 @@ catalog:
   drizzle-orm: ^0.44.7
   effect: ^3.19.6
   embla-carousel: ^8.6.0
+  esbuild: ^0.27.0
   eslint: ^9.39.1
   eslint-config-unjs: ^0.5.0
   eslint-plugin-format: ^1.0.2
