--- a/packages/wiki/package.json
+++ b/packages/wiki/package.json
@@ -22,6 +22,7 @@
     "@nuxt/eslint": "catalog:nuxt",
     "@nuxt/ui": "catalog:nuxt",
     "better-sqlite3": "catalog:",
+    "nuxt-studio": "catalog:nuxt",
     "zod": "catalog:",
     "zod-validation-error": "catalog:"
   },
