--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -73,6 +73,7 @@ catalog:
   uuid: ^13.0.0
   vitest: ^3.2.4
   vue: latest
+  vue-router: latest
   vue-tsc: ^3.1.5
   zod: ^4.1.13
   zod-validation-error: ^4.0.2
@@ -99,6 +100,7 @@ catalogs:
     nuxt: ^4.2.1
     nuxt-llms: ^0.1.3
     nuxt-og-image: ^5.1.12
+    nuxt-studio: ^1.1.0
 ignoredBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
