--- a/packages/nuxt-galaxy/package.json
+++ b/packages/nuxt-galaxy/package.json
@@ -13,6 +13,9 @@
     ".": {
       "types": "./dist/types.d.mts",
       "import": "./dist/module.mjs"
+    },
+    "./migrate": {
+      "import": "./dist/runtime/server/lib/migrate.js"
     }
   },
   "main": "./dist/module.mjs",
@@ -23,9 +26,12 @@
       ]
     }
   },
+  "bin": {
+    "nuxt-galaxy-migrate": "./bin/migrate.mjs"
+  },
   "files": [
+    "bin",
     "dist",
-    "drizzle.config.ts",
     "supabase"
   ],
   "scripts": {
