--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ trustPolicyExclude:
   - undici-types@6.21.0
   - undici@6.22.0
   - semver@6.3.1
+  - '@nuxtjs/supabase@2.0.3'
 packages:
   - packages/blendtype
   - packages/nuxt-galaxy
