--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,15 @@
 shellEmulator: true
 
 trustPolicy: no-downgrade
+
 trustPolicyExclude:
   - chokidar@4.0.3
   - undici-types@6.21.0
   - undici@6.22.0
   - semver@6.3.1
   - '@nuxtjs/supabase@2.0.3'
+  - nuxt-component-meta@0.17.1
+  - rxjs@7.8.2
 packages:
   - packages/blendtype
   - packages/nuxt-galaxy
@@ -17,6 +20,7 @@ packages:
 
 catalog:
   '@antfu/eslint-config': ^6.7.1
+  '@dotenvx/dotenvx': ^1.52.0
   '@iconify-json/eos-icons': ^1.2.4
   '@iconify-json/ep': ^1.2.3
   '@iconify-json/lucide': ^1.2.75
@@ -46,6 +50,7 @@ catalog:
   citty: ^0.2.0
   defu: ^6.1.4
   dotenv: ^17.2.3
+
   drizzle-kit: ^1.0.0-beta.13
   drizzle-orm: ^1.0.0-beta.13
   effect: ^3.19.6
@@ -101,6 +106,7 @@ catalogs:
     nuxt-llms: ^0.1.3
     nuxt-og-image: ^5.1.12
     nuxt-studio: ^1.1.0
+
 ignoredBuiltDependencies:
   - '@parcel/watcher'
   - '@tailwindcss/oxide'
