nuxt-galaxy cli for database migration

--- a/packages/nuxt-galaxy/package.json
+++ b/packages/nuxt-galaxy/package.json
@@ -13,6 +13,9 @@
     ".": {
       "types": "./dist/types.d.mts",
       "import": "./dist/module.mjs"
+    },
+    "./migrate": {
+      "import": "./dist/runtime/server/lib/migrate.js"
     }
   },
   "main": "./dist/module.mjs",
@@ -23,9 +26,12 @@
       ]
     }
   },
+  "bin": {
+    "nuxt-galaxy-migrate": "./bin/migrate.mjs"
+  },
   "files": [
+    "bin",
     "dist",
-    "drizzle.config.ts",
     "supabase"
   ],
   "scripts": {
@@ -53,10 +59,12 @@
     "db:seed:help": "tsx src/runtime/server/db/seed.ts --help"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "catalog:",
     "@nuxt/content": "catalog:nuxt",
     "@nuxt/kit": "catalog:nuxt",
     "@nuxtjs/supabase": "catalog:nuxt",
     "blendtype": "workspace:*",
+    "citty": "catalog:",
     "d3-dsv": "catalog:dataviz",
     "defu": "catalog:",
     "drizzle-orm": "catalog:",
@@ -75,7 +83,6 @@
     "@types/node": "catalog:",
     "@vue/test-utils": "catalog:",
     "changelogen": "catalog:",
-    "citty": "catalog:",
     "eslint": "catalog:",
     "happy-dom": "catalog:",
     "nuxt": "catalog:nuxt",
