--- a/packages/gaas-cli/pyproject.toml
+++ b/packages/gaas-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "gaas-cli"
-version = "0.1.0"
+dynamic = [ "version" ]
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.0"
@@ -33,5 +33,22 @@ dev = [
 ]
 
 [build-system]
-requires = [ "hatchling" ]
+requires = [
+  "hatchling",
+  "uv-dynamic-versioning"
+]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "uv-dynamic-versioning"
+
+[tool.uv-dynamic-versioning]
+vcs = "git"
+pattern-prefix = "gaas-cli-"
+fallback-version = "0.0.0.dev0"
+
+[tool.hatch.build.hooks.version]
+path = "src/gaas_cli/_version.py"
+template = '''
+version = "{version}"
+'''
