--- a/packages/nuxt-galaxy/supabase/config.toml
+++ b/packages/nuxt-galaxy/supabase/config.toml
@@ -63,7 +63,7 @@ schema_paths = []
 
 [db.seed]
 # If enabled, seeds the database after migrations during a db reset.
-enabled = true
+enabled = false
 # Specifies an ordered list of seed files to load during db reset.
 # Supports glob patterns relative to supabase directory: "./seeds/*.sql"
 sql_paths = [ "./seed.sql" ]
@@ -121,7 +121,9 @@ additional_redirect_urls = [
   "http://localhost:3000",
   "http://127.0.0.1:3000",
   "http://localhost:3000/confirm",
-  "http://127.0.0.1:3000/confirm"
+  "http://127.0.0.1:3000/confirm",
+  "http://localhost:3000/*",
+  "http://127.0.0.1:3000/*",
 ]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
